@@ -2,7 +2,8 @@ version 2.5.3
 --------------
 Thanks to Neil Darlow for feedback. Thanks to xloem at sourceforge for bugs
 report, troubleshooting and fixes, great job! Thanks to xloem again for the
-proposed patches. Thanks to Matteo Sasso for bug report.
+proposed patches. Thanks to Matteo Sasso for bug report. Thanks to Gulikoza
+for improvement proposal and patch.
 
 version 2.5.2
 --------------
