@@ -33,6 +33,7 @@ extern "C"
 } // end extern "C"
 
 #include "cat_file.hpp"
+#include "cat_tools.hpp"
 
 namespace libdar
 {
